# mycells

./: .gitignore  PIPELINE.txt  README.md  anim.sh  main.py  pyproject.toml  viz.py
data/: anal.py  norm_agentlans.py  norm_british.py  norm_harvsents.py  norm_sentences.py  norm_tatoeba.py  render.py  seed.py
