[project]
name = "mycells"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "types-lxml>=2026.2.16",
]
